[gd_scene load_steps=3 format=3 uid="uid://bjfb3pjs7xrbf"]

[ext_resource type="Script" path="res://Scripts/first_scene.gd" id="1_hqyvb"]
[ext_resource type="Script" path="res://Scripts/select_session.gd" id="2_s3swi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hqyvb")
metadata/_edit_vertical_guides_ = [575.0]

[node name="MainMenuUI" type="CanvasLayer" parent="."]

[node name="BeginHypnosisButton" type="Button" parent="MainMenuUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -112.0
offset_right = 155.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
text = "Begin Hypnosis"

[node name="SelectSession" type="FileDialog" parent="MainMenuUI"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(800, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.hypsav")
script = ExtResource("2_s3swi")

[node name="SessionSelectedLabel" type="Label" parent="MainMenuUI"]
offset_left = 487.0
offset_top = 539.0
offset_right = 659.0
offset_bottom = 651.0
text = "Loaded file:
Nothing loaded"
horizontal_alignment = 1
autowrap_mode = 3

[node name="BeginEditingButton" type="Button" parent="MainMenuUI"]
offset_left = 841.0
offset_top = 288.0
offset_right = 947.0
offset_bottom = 363.0
text = "Edit Session"

[node name="SessionSelectButton" type="Button" parent="MainMenuUI"]
offset_left = 487.0
offset_top = 472.0
offset_right = 659.0
offset_bottom = 522.0
text = "Load Session"

[node name="SceneContainer" type="Node2D" parent="."]

[connection signal="pressed" from="MainMenuUI/BeginHypnosisButton" to="." method="_on_begin_hypnosis_pressed"]
[connection signal="file_selected" from="MainMenuUI/SelectSession" to="MainMenuUI/SelectSession" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="MainMenuUI/BeginEditingButton" to="." method="_on_begin_editing_button_pressed"]
[connection signal="pressed" from="MainMenuUI/SessionSelectButton" to="MainMenuUI/SelectSession" method="_on_load_file_pressed"]
